# threat-modeling-ssg

./: .gitignore  Makefile  README.md  config.toml  data.json  generate.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo/: model.py
src/ratm/: __init__.py  components.py  ratm.py  report.py
src/ratm/ssg/: cli.py  models.py  views.py
src/ratm/ssg/templates/: base.html  index.html  property.html  scenarios.html  stats.html  threat.html
src/ratm/ssg/templates/assets/: main.css
src/ratm/ssg/templates/includes/: dfd_diagram.html  diagram_scripts.html  mermaid_diagram.html  threats_table.html
src/ssg_threatmodel/: cli.py  graph_dfd.py  graph_sequence.py  graphs.py  models.py  utils.py  views.py
src/ssg_threatmodel/templates/: base.html  component.html  components.html  generator.html  index.html  property.html  scenario.html  summary.html  threat.html  threats.html  threats_components.html
src/ssg_threatmodel/templates/assets/: main.css
src/ssg_threatmodel/templates/includes/: components_table.html  findings_table.html  flows_table.html  threats_table.html  zoom.html
templates/: base.html  component.html  components.html  components_table.html  property.html  scenario.html  summary.html  threat.html  threats.html  threats_table.html
templates/assets/: main.css
tests/: test_model_methods.py  test_templates.py
